place order form changes

--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
                                 <div class="col s12 m6 l4">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
-                                    <h4 class="center-align itemName">Name</h4>
-                                    <h4 class="center-align itemDescription">Description</h4>
-                                    <h6 class="center-align itemName">$4.20 per sticker</h6>
+                                    <h4 class="center-align itemName">Standard square</h4>
+                                    <h4 class="center-align itemDescription">Comes in a variety of colors</h4>
+                                    <h6 class="center-align itemName">$4.20 each</h6>
                                 </div>
                                 <div class="col s12 m6 l4">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
-                                    <h4 class="center-align itemName">Name</h4>
-                                    <h4 class="center-align itemDescription">Description</h4>
-                                    <h6 class="center-align itemName">$4.20 per sticker</h6>
+                                    <h4 class="center-align itemName">Standard Cirle</h4>
+                                    <h4 class="center-align itemDescription">Comes in a variety of colors</h4>
+                                    <h6 class="center-align itemName">$4.20 each</h6>
                                 </div>
                                 <div class="col s12 m6 l4">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
-                                    <h4 class="center-align itemName">Name</h4>
-                                    <h4 class="center-align itemDescription">Description</h4>
-                                    <h6 class="center-align itemName">$4.20 per sticker</h6>
+                                    <h4 class="center-align itemName">Social Media</h4>
+                                    <h4 class="center-align itemDescription">Turn your tags into a sweet sticker</h4>
+                                    <h6 class="center-align itemName">$4.20 each</h6>
                                 </div>
                             </div>
                         </span>
@@ -83,22 +83,22 @@
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">Holographic</h4>
-                                    <h4 class="center-align itemDescription">Description</h4>
-                                    <h6 class="center-align itemName">$4.20 per sticker</h6>
+                                    <h4 class="center-align itemDescription">3D Effect</h4>
+                                    <h6 class="center-align itemName">$1.00 each</h6>
                                 </div>
                                 <div class="col s12 m6 l4">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">Chrome</h4>
-                                    <h4 class="center-align itemDescription">Description</h4>
-                                    <h6 class="center-align itemName">$4.20 per sticker</h6>
+                                    <h4 class="center-align itemDescription">Looks like the tin mans shaft</h4>
+                                    <h6 class="center-align itemName">$1.00 each</h6>
                                 </div>
                                 <div class="col s12 m6 l4">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">Glitter</h4>
-                                    <h4 class="center-align itemDescription">Description</h4>
-                                    <h6 class="center-align itemName">$4.20 per sticker</h6>
+                                    <h4 class="center-align itemDescription">Farted on by a unicorn</h4>
+                                    <h6 class="center-align itemName">$1.00 each</h6>
                                 </div>
                             </div>
                         </span>
@@ -116,15 +116,15 @@
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">House 1</h4>
-                                    <h4 class="center-align itemDescription">Description</h4>
-                                    <h6 class="center-align itemName">$4.20 per sticker</h6>
+                                    <h4 class="center-align itemDescription">Sicc Grafik Roboto design 1</h4>
+                                    <h6 class="center-align itemName">$5.00 each</h6>
                                 </div>
                                 <div class="col s12 m6 l4 offset-l2">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">House 2</h4>
-                                    <h4 class="center-align itemDescription">Description</h4>
-                                    <h6 class="center-align itemName">$4.20 per sticker</h6>
+                                    <h4 class="center-align itemDescription">Sicc Grafik Roboto design 1</h4>
+                                    <h6 class="center-align itemName">$5.00 each</h6>
                                 </div>
                             </div>
                         </span></div>
@@ -198,19 +198,16 @@
                                 </div>
 
                                 <!-- === UPLOAD DESIGN === -->
-                                <div class="file-field input-field">
-                                    <h4 class="uploadImgText center-align">Upload
-                                        your design</h4>
-                                    <h6 class="center-align" id="uploadDirections">Design
-                                        specifications will
-                                        go here</h6>
-                                    <hr width="40%">
-                                    <div class="btn" id="uploadImgBtn">
-                                        <span>File</span>
-                                        <input id="fileInput" type="file">
-                                    </div>
-                                    <div class="file-path-wrapper">
-                                        <input class="file-path validate" type="text">
+                                <h4 class="uploadImgText center-align">Link
+                                    your design</h4>
+                                <h6 class="center-align" id="uploadDirections">Image file
+                                    specifications will
+                                    go here</h6>
+                                <hr width="40%">
+                                <div class="row">
+                                    <div class="input-field col s12 l8 offset-l2">
+                                        <input id="linkImage" type="text" class="validate">
+                                        <label for="linkImage" class="orderInputLabels">Link image here</label>
                                     </div>
                                 </div>
                                 <hr width="80%" id="separationHR">
