product imgs replaced

--- a/index.html
+++ b/index.html
@@ -45,26 +45,23 @@
                             <h4 class="placeOrderText center-align">Items</h4>
                             <hr>
                             <div class="row productRow">
-                                <div class="col s12 m6 l4">
-                                    <img src="./assets/images/static/loadingLife.jpg"
+                                <div class="col s12 m6 l4 product">
+                                    <img src="./assets/images/Products/Standard/StandardBlack.jpg"
                                         class="responsive-img materialboxed" alt="">
-                                    <h4 class="center-align itemName">Standard square</h4>
-                                    <h4 class="center-align itemDescription">Comes in a variety of colors</h4>
-                                    <h6 class="center-align itemName">$4.20 each</h6>
+                                    <h4 class="center-align itemName">Black</h4>
+                                    <h4 class="center-align itemDescription">Standard black</h4>
+                                    <h6 class="center-align itemName">$1.00 per 2x7</h6>
+                                    <h6 class="center-align itemName">$1.50 per 3x8</h6>
+                                    <h6 class="center-align itemName">$2.00 per 4x9</h6>
                                 </div>
-                                <div class="col s12 m6 l4">
-                                    <img src="./assets/images/static/loadingLife.jpg"
+                                <div class="col s12 m6 l4 product">
+                                    <img src="./assets/images/Products/Standard/StandardWhite.jpg"
                                         class="responsive-img materialboxed" alt="">
-                                    <h4 class="center-align itemName">Standard Cirle</h4>
-                                    <h4 class="center-align itemDescription">Comes in a variety of colors</h4>
-                                    <h6 class="center-align itemName">$4.20 each</h6>
-                                </div>
-                                <div class="col s12 m6 l4">
-                                    <img src="./assets/images/static/loadingLife.jpg"
-                                        class="responsive-img materialboxed" alt="">
-                                    <h4 class="center-align itemName">Social Media</h4>
-                                    <h4 class="center-align itemDescription">Turn your tags into a sweet sticker</h4>
-                                    <h6 class="center-align itemName">$4.20 each</h6>
+                                    <h4 class="center-align itemName">White</h4>
+                                    <h4 class="center-align itemDescription">Standard white</h4>
+                                    <h6 class="center-align itemName">$1.00 per 2x7</h6>
+                                    <h6 class="center-align itemName">$1.50 per 3x8</h6>
+                                    <h6 class="center-align itemName">$2.00 per 4x9</h6>
                                 </div>
                             </div>
                         </span>
@@ -79,26 +76,41 @@
                             <h4 class="placeOrderText center-align">Items</h4>
                             <hr>
                             <div class="row productRow">
-                                <div class="col s12 m6 l4">
-                                    <img src="./assets/images/static/loadingLife.jpg"
+                                <div class="col s12 m6 l4 product">
+                                    <img src="./assets/images/Products/Premium/HolographicBlue.jpg"
                                         class="responsive-img materialboxed" alt="">
-                                    <h4 class="center-align itemName">Holographic</h4>
-                                    <h4 class="center-align itemDescription">3D Effect</h4>
-                                    <h6 class="center-align itemName">$1.00 each</h6>
+                                    <h4 class="center-align itemName">Holographic Blue</h4>
+                                    <h4 class="center-align itemDescription">Blue/silver 3D effect</h4>
+                                    <h6 class="center-align itemName">$1.50 per 2x7</h6>
+                                    <h6 class="center-align itemName">$2.00 per 3x8</h6>
+                                    <h6 class="center-align itemName">$2.50 per 4x9</h6>
                                 </div>
-                                <div class="col s12 m6 l4">
-                                    <img src="./assets/images/static/loadingLife.jpg"
+                                <div class="col s12 m6 l4 product">
+                                    <img src="./assets/images/Products/Premium/HolographicRed.jpg"
+                                        class="responsive-img materialboxed" alt="">
+                                    <h4 class="center-align itemName">Holographic Red</h4>
+                                    <h4 class="center-align itemDescription">Red/purple 3D effect</h4>
+                                    <h6 class="center-align itemName">$1.50 per 2x7</h6>
+                                    <h6 class="center-align itemName">$2.00 per 3x8</h6>
+                                    <h6 class="center-align itemName">$2.50 per 4x9</h6>
+                                </div>
+                                <div class="col s12 m6 l4 product">
+                                    <img src="./assets/images/Products/Premium/Chrome.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">Chrome</h4>
-                                    <h4 class="center-align itemDescription">Looks like the tin mans shaft</h4>
-                                    <h6 class="center-align itemName">$1.00 each</h6>
+                                    <h4 class="center-align itemDescription">Chrome finish</h4>
+                                    <h6 class="center-align itemName">$2.00 per 2x7</h6>
+                                    <h6 class="center-align itemName">$2.50 per 3x8</h6>
+                                    <h6 class="center-align itemName">$3.00 per 4x9</h6>
                                 </div>
-                                <div class="col s12 m6 l4">
-                                    <img src="./assets/images/static/loadingLife.jpg"
+                                <div class="col s12 m6 l4 product">
+                                    <img src="./assets/images/Products/Premium/Gold.jpg"
                                         class="responsive-img materialboxed" alt="">
-                                    <h4 class="center-align itemName">Glitter</h4>
-                                    <h4 class="center-align itemDescription">Farted on by a unicorn</h4>
-                                    <h6 class="center-align itemName">$1.00 each</h6>
+                                    <h4 class="center-align itemName">Gold</h4>
+                                    <h4 class="center-align itemDescription">Golden finish</h4>
+                                    <h6 class="center-align itemName">$2.00 per 2x7</h6>
+                                    <h6 class="center-align itemName">$2.50 per 3x8</h6>
+                                    <h6 class="center-align itemName">$3.00 per 4x9</h6>
                                 </div>
                             </div>
                         </span>
@@ -112,14 +124,14 @@
                             <h4 class="placeOrderText center-align">Items</h4>
                             <hr>
                             <div class="row productRow">
-                                <div class="col s12 m6 l4 offset-l1">
+                                <div class="col s12 m6 l4 product">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">House 1</h4>
                                     <h4 class="center-align itemDescription">Sicc Grafik Roboto design 1</h4>
                                     <h6 class="center-align itemName">$5.00 each</h6>
                                 </div>
-                                <div class="col s12 m6 l4 offset-l2">
+                                <div class="col s12 m6 l4 product">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">House 2</h4>
@@ -272,7 +284,7 @@
         </div>
         <div class="parallax-container valign-wrapper center-align">
             <div class="center-align" id="contactBox">
-                <h3>For all inqueries and issues:</h3>
+                <h3>For all inquiries and issues:</h3>
                 <div class="row">
                     <div class="col s12 l12">
                         <h5>Contact Us: </h5><a href="./contact.html"><i
